@@ -83,6 +83,7 @@ Bug fixes:
  - Fix rendering in non-UTF8 terminals.
  - Fix stage-update-line by rewriting the diff chunk containing the line instead
    of using `--unidiff-zero` and a diff context of zero. (GH #130)
+ - Fix status-update to work for untracked directories. (GH #236)
 
 tig-1.2.1
 ---------
